# Polynomials

./: CMakeLists.txt  README.md
include/: arr_table.h  arr_table.hxx  base_table.h  base_table.hxx  chaining_hash_table.hxx  interface.h  interface.hxx  list.hxx  list_table.hxx  monom.h  monom.hxx  open_access_hash_table.hxx  ordered_table.hxx  polynomial.h  polynomial.hxx  postfix.hxx  stack.h  tree_table.hxx
sample/: CMakeLists.txt  sample.cxx
src/: arr_table.cxx  base_table.cxx  chaining_hash_table.cxx  interface.cxx  list_table.cxx  monom.cxx  open_access_hash_table.cxx  ordered_table.cxx  polynomial.cxx  postfix.cxx  tree_table.cxx
tests/: CMakeLists.txt  test_arr_table.cxx  test_chaining_hash_table.cxx  test_list.cxx  test_list_table.cxx  test_monom.cxx  test_open_access_hash_table.cxx  test_ordered_table.cxx  test_polynomial.cxx  test_tpostfix.cxx  test_tstack.cxx
